WIP ci - update paths

--- a/.github/workflows/godot-ci.yml
+++ b/.github/workflows/godot-ci.yml
@@ -4,8 +4,8 @@ on: push
 env:
   GODOT_VERSION: "4.0"
   RELEASE_NAME: beta8
-  EXPORT_NAME: test-project
-  PROJECT_PATH: test-project
+  EXPORT_NAME: bunny-head
+  PROJECT_PATH: .
   
 jobs:
   export-windows:
