--- a/.github/workflows/godot-ci.yml
+++ b/.github/workflows/godot-ci.yml
@@ -24,7 +24,7 @@ jobs:
       - name: Windows Build
         run: |
           mkdir -v -p build/windows
-          godot -v --headless --export-debug "Windows Desktop" ../build/windows/$EXPORT_NAME.exe
+          godot -v --headless --export-debug "Windows Desktop" ./build/windows/$EXPORT_NAME.exe
       - name: Upload Artifact
         uses: actions/upload-artifact@v1
         with:
@@ -48,7 +48,7 @@ jobs:
       - name: Linux Build
         run: |
           mkdir -v -p build/linux
-          godot -v --headless --export-debug "Linux/X11" ../build/linux/$EXPORT_NAME.x86_64
+          godot -v --headless --export-debug "Linux/X11" ./build/linux/$EXPORT_NAME.x86_64
       - name: Upload Artifact
         uses: actions/upload-artifact@v1
         with:
@@ -72,7 +72,7 @@ jobs:
       - name: Web Build
         run: |
           mkdir -v -p build/web
-          godot -v --headless --export-debug "Web" ../build/web/index.html
+          godot -v --headless --export-debug "Web" ./build/web/index.html
       - name: Upload Artifact
         uses: actions/upload-artifact@v1
         with:
@@ -104,7 +104,7 @@ jobs:
       - name: Mac Build
         run: |
           mkdir -v -p build/mac
-          godot -v --headless --export-debug "Mac OSX" ../build/mac/$EXPORT_NAME.zip
+          godot -v --headless --export-debug "Mac OSX" ./build/mac/$EXPORT_NAME.zip
       - name: Upload Artifact
         uses: actions/upload-artifact@v1
         with:
